ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/Statements/parserWithStatement1.d/input.ts.stderr
error: The 'with' statement is not supported. All symbols in a 'with' block will have type 'any'.
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/Statements/parserWithStatement1.d/input.ts:1:1
  |
1 | with (foo) {
  | ^^^^

error: With statement are not allowed in strict mode
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/Statements/parserWithStatement1.d/input.ts:1:1
  |
1 | with (foo) {
  | ^^^^

